--- a/mkk.env
+++ b/mkk.env
@@ -1,3 +1,3 @@
-SECRET_KEY=-wxve1m$8jzke-=))rj9w+cxy-mgy%cixlfodsuiyqg9dg1bv5
+SECRET_KEY=-wxve1m$8jzkerj9w+cxy-mgy%cixlfodsuiyqg9dg1bv5
 DEBUG=True
-DATABASE_URL=
+DATABASE_URL=https://github.com/mkkk997750/Health-Stack-System-Django-/blob/main/db.sqlite3
