--- a/mkk.env
+++ b/mkk.env
@@ -1,3 +1,17 @@
-SECRET_KEY=-wxve1m$8jzkerj9w+cxy-mgy%cixlfodsuiyqg9dg1bv5
-DEBUG=True
-DATABASE_URL=https://github.com/mkkk997750/Health-Stack-System-Django-/blob/main/db.sqlite3
+# Django credentials
+DEBUG=
+SECRET_KEY=""
+
+# Mailtrap credentials 
+SMTP_HOST=''
+SMTP_PORT=
+SMTP_USER=''
+SMTP_PASSWORD=''
+
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': BASE_DIR / 'db.sqlite3',
+    }
+}
+
